# ChangeLog for dev-python/bottle
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/bottle/ChangeLog,v 1.43 2015/01/16 11:54:50 armin76 Exp $

  16 Jan 2015; Raúl Porcel <armin76@gentoo.org> bottle-0.12.7.ebuild:
  alpha/ia64/sparc stable wrt #530406

  09 Dec 2014; Jeroen Roovers <jer@gentoo.org> bottle-0.12.7.ebuild:
  Stable for HPPA (bug #530406).

  02 Dec 2014; Markus Meier <maekke@gentoo.org> bottle-0.12.7.ebuild:
  arm stable, bug #530406

  02 Dec 2014; Pacho Ramos <pacho@gentoo.org> bottle-0.12.7.ebuild:
  amd64/x86 stable, bug #530406

  01 Dec 2014; Ian Delaney <idella4@gentoo.org> bottle-0.12.7.ebuild:
  clean py3.2 add pypy3 support

  25 Aug 2014; Christopher Reffett <2011creffett@gentoo.org>
  -bottle-0.11.6-r1.ebuild, -bottle-0.12.5.ebuild:
  Security cleanup wrt bug 509350

*bottle-0.12.7 (15 Jul 2014)

  15 Jul 2014; Patrick Lauer <patrick@gentoo.org> +bottle-0.12.7.ebuild:
  Bump

  08 Jul 2014; Naohiro Aota <naota@gentoo.org> bottle-0.12.6.ebuild:
  Add ~x86-fbsd wrt #515610

  06 Jul 2014; Markus Meier <maekke@gentoo.org> bottle-0.11.7.ebuild:
  arm stable, bug #509350

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> bottle-0.11.7.ebuild:
  Stable for sparc, wrt bug #509350

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> bottle-0.11.7.ebuild:
  Stable for ppc, wrt bug #509350

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> bottle-0.11.7.ebuild:
  Stable for ppc64, wrt bug #509350

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> bottle-0.11.7.ebuild:
  Stable for ia64, wrt bug #509350

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> bottle-0.11.7.ebuild:
  Stable for alpha, wrt bug #509350

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> bottle-0.11.7.ebuild:
  Stable for x86, wrt bug #509350

  04 Jul 2014; Agostino Sarubbo <ago@gentoo.org> bottle-0.11.7.ebuild:
  Stable for amd64, wrt bug #509350

  28 Jun 2014; Jeroen Roovers <jer@gentoo.org> bottle-0.12.6.ebuild: