@@ -1,18 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST bottle-0.11.7.tar.gz 60212 SHA256 8f301e45c522e458e5f51a59e1737b0dd84fc49c691f40f3a8a042b70691bf42 SHA512 d85e2da58df564f7a305cd1003491b69ac0c2d950962580c28183f710346642de1d3c9706605a56aadae3d755d6e5dd62d8c9b76422b8e95c64512f6ba560269 WHIRLPOOL 89e3e4a7145eae16e529b0ffdd360e02ed18294cc95d9d65658fdcbc8e8f5e10058c5222ef970f658def1ce130f480599b561912b5cea120dc8309db5b8d8a37
-DIST bottle-0.12.6.tar.gz 68934 SHA256 2bc3b9e73b8617d0329226eb819fb196fc262fa7db950f8ff26ba073761b8059 SHA512 2e5dec0b76b483c1fa8220d7bfce0ff1f799aa84214c053db782056d312196a3a524d1cf636c234cde201ece382190d1d45bd0da6093c10016af24b34c994b0b WHIRLPOOL 76626cc2e995fa80da41081260c70cae51e86e6026b82cf379e5be7f8da8825acb331d0fb06e27cf30791bfff371c58380389e2e48750d3af445676aab198bd3
 DIST bottle-0.12.7.tar.gz 69375 SHA256 e3ea2191f06ca51af45bf6ca41ed2d1b2d809ceda0876466879fe205be7b2073 SHA512 ef58c0ec3b09b237914a170aae59a577a59e579478cd5f1bcef9fe73a9d3a4776794263d6f7b60dd426629aec2987ee4c3f6b8fa0486a99879792c70e373fcbc WHIRLPOOL dc6a34f9819ed77b0b05c01c13efe553af37fc9c32cfe955d6199277a8e38992a0e4982b8e67b0aab12349f15434d094ec7674a7970c71e264e72f3b74c617f0
-EBUILD bottle-0.11.7.ebuild 1023 SHA256 59ae97019e48341afdec7c5c0f57f6fab7e8d61ed526508aac994fdf4137aa65 SHA512 565a08d21158065998c69b550f51aa8df7614041458c4c7f14850ce5688edd17093138c4cba21a4674f1d0becd92f5880b7693fcbe872345d18c1c18cffc9d0f WHIRLPOOL 93ca613ec1f47ebd617176cd09290a351fd321a1f98fa0c81fb6bb600efeb5e8d50169e998139ecc7d47d7d6423d65badb659aaa5781ea9ec4c838f662feb91f
-EBUILD bottle-0.12.6.ebuild 1039 SHA256 399ff37fbe2f48ccb9c7e75f624e384ec52ccd955010563e8e0584028f9eb94d SHA512 5fb1608caa9bfb667d940e0357bc719fb2af074c9100974467410992309ea4623f6662cba8982a557adf440cb956ccc575e463b716424c0108f2b8a69da38f10 WHIRLPOOL 2dfb6149b7894cbd8f6059c744a932cdd287500eca2778c990ae10c220997d80dc18ad935ae684984e938aebbaa6a4f25d02fec94a8fee4586a46b538c856fd3
+DIST bottle-0.12.8.tar.gz 69414 SHA256 cd5d1755a85e533205ed8a2465badf38602227c5f171c3852e07724b28c050ac SHA512 85fbdac6f7ae804a74bc527bb47bcdb5cf653a0227efe36e81e25513b687dd4abc1f772ff7232bd914cb392dea07297154d80aa05b1216c1f796dbed0d5a9510 WHIRLPOOL 833f434683f18511560973a9b0defeaa048ec21d0c60d30c69b11fc12f0ea4511a693a532d227b4ef419c99e664ba26384a95111950bf2ec1128a5509d8a0259
 EBUILD bottle-0.12.7.ebuild 1036 SHA256 8c545d8f77445a220a94033d14e60bf7c37d6ecbfda6a8f51c025874618d2c87 SHA512 1eabacca6519176163e37d996ab8a2dccd3969b7e15c609fde11f963758a237d2498a398f6313ecbd174d0394af8a4302e5bc6df0ad881c3bfb5b70cfb396708 WHIRLPOOL cc0ccc8f7d5f92794a2b23d5c44184889f5f259bfe43e1c5ec41a158cc07f07b0d400ac2dd0cd90ac70d72f76fe6600728f660dec1dd3beb35990ecafded2a55
-MISC ChangeLog 5767 SHA256 ad91adcdcc54529641e68ab7d064181b81975ad0940db26d71b24059b3e2c2d2 SHA512 9c4aa632edb57272f8a79018e0ad780813f65bf6f643673de6a97937c445603101d22be0de6fa019ec7bb7397f9840e6dd7fc0d03e2e5b027aaae78fc5c08e31 WHIRLPOOL b0fef615b53e41de4582bfa49fe6150a39a3f0ed1601ae2826c6d7cff56db78b88baf3945ecb8bc602e5c67be1e39bc3ef6f7cdf6d6ffa7c17a235eaa4e96142
+EBUILD bottle-0.12.8.ebuild 1307 SHA256 495d2df404ddbf7ac05f4b267b85d50ab79620398d6503fe1babd50830646a3f SHA512 ad3b58525431ff914820b8c05c042b24676ec6676ab877873f541684d024ef242f1ee28e5903060ce83c9bbb4ea88126bf7f58b66bc02636ba388491f8a4832b WHIRLPOOL bc22dbb3e9e7133db7c6439fedd9b5dce618e41e8220cd20a3f806f438e64543b5519d01f56df4d806e06c8353c4614fc9641bf265dbc3f0a4aee68645126dc4
+MISC ChangeLog 5982 SHA256 aa372498e9294ce92e374ae965b59347a14dd90f563d390edc6c887fcceb995d SHA512 8631186440b7e3c038defdca934e0292aacba8575ef8e37a0d23f04251803525c47f03ed0f6f421a4aa2b226fe67e1dcfbedfe5505d822375c481d45580b8661 WHIRLPOOL 0fb3d3f3977b743dc784a199857677e663869abdfaf2fa4d6dd5372067108c4436de038bc7b2f7e2d67c24d8c526330506be63b9b9ddb26a3a8dad96d5d5442f
 MISC metadata.xml 253 SHA256 e46efd590a64061ef839b703b4ea6f25ec8aa4b2e4da401c7ae00c74828de0c2 SHA512 8b47855847429a6f134541fe072f4b650f58e8ef0eb534e61c88442681429185b6ae3217512c69a427cf1309bad72fa7ab0d17bc62db76e4653081639224eac4 WHIRLPOOL 28eed9c27b29956e68cc70e1f74106f7e1b30a744c0cf045957cf80b5da93c05174f9a426ea7efef83ed07b7b3bdeb1c7139199e211837c5d4ec64870e0e7c69
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlS4/AsACgkQuQc30/atMkAD2ACfdzujtXikm0yM/CwRZoWvybAJ
-TH8AoIzyHxfHk8WZRVxLpsy3ji1/cE24
-=JfHa
+iEYEAREIAAYFAlTQMfIACgkQso7CE7gHKw2BLwCguGnFPSodg3Mzrs12AN1jEua0
+MiwAoNsDRqzLJM6YunNoWA2ewWDynDAS
+=uT3m
 -----END PGP SIGNATURE-----
