@@ -1,33 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/bottle/bottle-0.11.7.ebuild,v 1.9 2014/07/06 17:43:42 maekke Exp $
-
-EAPI=5
-
-PYTHON_COMPAT=( python{2_6,2_7,3_2,3_3} pypy pypy2_0)
-inherit distutils-r1
-
-DESCRIPTION="A fast and simple micro-framework for small web-applications"
-HOMEPAGE="http://pypi.python.org/pypi/bottle http://bottlepy.org/"
-SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="alpha amd64 arm ia64 ppc ppc64 sparc x86"
-IUSE=""
-
-DEPEND=""
-RDEPEND=""
-
-python_prepare_all() {
-	sed -i -e '/scripts/d' setup.py || die
-	distutils-r1_python_prepare_all
-}
-
-pkg_postinst() {
-	elog "Due to problems with bottle.py being in /usr/bin (see bug #474874)"
-	elog "we do as most other distros and do not install the script anymore."
-	elog "If you do want/have to call it directly rather than through your app,"
-	elog "please use the following instead:"
-	elog '  `python -m bottle`'
-}
