@@ -1,10 +1,10 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/bottle/bottle-0.12.6.ebuild,v 1.3 2014/07/08 00:19:29 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/bottle/bottle-0.12.8.ebuild,v 1.1 2015/02/03 02:26:39 idella4 Exp $
 
 EAPI=5
 
-PYTHON_COMPAT=( python{2_7,3_2,3_3,3_4} pypy )
+PYTHON_COMPAT=( python{2_7,3_3,3_4} pypy pypy3 )
 inherit distutils-r1
 
 DESCRIPTION="A fast and simple micro-framework for small web-applications"
@@ -21,7 +21,16 @@ RDEPEND=""
 
 python_prepare_all() {
 	sed -i -e '/scripts/d' setup.py || die
+
+	# Remove test file requring connection to network
+	rm ./test/test_server.py || die
 	distutils-r1_python_prepare_all
+}
+
+python_test() {
+	# A few odd fails in the suite under pypy
+	# https://github.com/bottlepy/bottle/issues/714
+	"${PYTHON}" test/testall.py || die "tests failed under ${EPYTHON}"
 }
 
 pkg_postinst() {
