@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/bottle
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/bottle/ChangeLog,v 1.43 2015/01/16 11:54:50 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/bottle/ChangeLog,v 1.44 2015/02/03 02:26:39 idella4 Exp $
+
+*bottle-0.12.8 (03 Feb 2015)
+
+  03 Feb 2015; Ian Delaney <idella4@gentoo.org> +bottle-0.12.8.ebuild,
+  -bottle-0.11.7.ebuild, -bottle-0.12.6.ebuild:
+  bump; add test phase with removal of 1 rogue test file, rm old
 
   16 Jan 2015; Raúl Porcel <armin76@gentoo.org> bottle-0.12.7.ebuild:
   alpha/ia64/sparc stable wrt #530406
